test/fail/basic_syntax/continue_outside_loop.lly
#[
SyntaxError: 'continue' used outside of a loop.
    from continue_outside_loop.lly:6
]#

continue
